gdk-includes/include/gdk/gdk.h

/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/**
 * Get the two factor configuration for the current user.
 *
 * :param session: The session to use.
 * :param config: Destination for the returned :ref:`twofactor_configuration`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_twofactor_config(struct GA_session* session, GA_json** config);
/**
 * Change wallet settings.
 *
 * :param session: The session to use.
 * :param settings: The new :ref:`settings` values.
 * :param call: Destination for the resulting GA_auth_handler.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``settings`` will be emptied when the call completes.
 */
GDK_API int GA_change_settings(struct GA_session* session, GA_json* settings, struct GA_auth_handler** call);
/**
 * Get current wallet settings.
 *
 * :param session: The session to use.
 * :param settings: Destination for the current :ref:`settings`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_settings(struct GA_session* session, GA_json** settings);
GDK_API int GA_convert_json_to_string(const GA_json* json, char** output);
GDK_API int GA_convert_string_to_json(const char* input, GA_json** output);
GDK_API int GA_convert_json_value_to_string(const GA_json* json, const char* path, char** output);
GDK_API int GA_convert_json_value_to_uint32(const GA_json* json, const char* path, uint32_t* output);
GDK_API int GA_convert_json_value_to_uint64(const GA_json* json, const char* path, uint64_t* output);
GDK_API int GA_convert_json_value_to_bool(const GA_json* json, const char* path, uint32_t* output);
GDK_API int GA_convert_json_value_to_json(const GA_json* json, const char* path, GA_json** output);
/**
 * Free a GA_json object.
 *
 * :param json: GA_json object to free.
 */
GDK_API int GA_destroy_json(GA_json* json);
/**
 * Get the status/result of an action requiring authorization.
 *
 * :param call: The auth_handler whose status is to be queried.
 * :param output: Destination for the resulting :ref:`auth-handler-status`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 *
 * Methods in the api that may require two factor or hardware authentication
 * to complete return a GA_auth_handler object. This object encapsulates the
 * process of determining whether authentication is required and handling
 * conditions such as re-prompting and re-trying after an incorrect two
 * factor code is entered.
 *
 * The object acts as a state machine which is stepped through by the caller
 * until the desired action is completed. At each step, the current state can
 * be determined and used to perform the next action required.
 *
 * Some actions require a sequence of codes and decisions; these are hidden
 * behind the state machine interface so that callers do not need to handle
 * special cases or program their own logic to handle any lower level API
 * differences.
 *
 * The state machine has the following states, which are returned in the
 * ``"status"`` element from `GA_auth_handler_get_status`:
 *
 * * ``"done"``: The action has been completed successfully. Any data returned
 *|  from the action is present in the ``"result"`` element of the status JSON.
 *| The auth_handler object should be destroyed using `GA_destroy_auth_handler`
 *| after receiving this status.
 *
 * * ``"error"``: A non-recoverable error occurred performing the action. The
 *| associated error message is given in the status element ``"error"``. The
 *| auth_handler object should be destroyed using `GA_destroy_auth_handler` and
 *| the action restarted from scratch if this state is returned.
 *
 * * ``"request_code"``: Two factor authorization is required. The caller should
 *| prompt the user to choose a two factor method from the ``"methods"`` element
 *| and call `GA_auth_handler_request_code` with the selected method.
 *
 * * ``"resolve_code"``: A twofactor code from the ``"request_code"`` step, or
 *| data from a hardware device is required. If the status JSON contains
 *| :ref:`hw-required-data`, then see :ref:`hw-resolve-overview` for details.
 *| Otherwise, to resolve a twofactor code, the caller should prompt the user
 *| to enter the code from the twofactor method chosen in the ``"request_code"``
 *| step, and pass this code to `GA_auth_handler_resolve_code`.
 *
 * * ``"call"``: Twofactor or hardware authorization is complete and the caller
 *| should call `GA_auth_handler_call` to perform the action.
 *
 */
GDK_API int GA_auth_handler_get_status(struct GA_auth_handler* call, GA_json** output);
/**
 * Request a two factor authentication code to authorize an action.
 *
 * :param call: The auth_handler representing the action to perform.
 * :param method: The selected two factor method to use
 */
GDK_API int GA_auth_handler_request_code(struct GA_auth_handler* call, const char* method);
/**
 * Authorize an action by providing its previously requested two factor authentication code.
 *
 * :param call: The auth_handler representing the action to perform.
 * :param code: The two factor authentication code received by the user, or
 *|    the serialised JSON response for hardware interaction (see :ref:`hw-resolve-overview`).
 */
GDK_API int GA_auth_handler_resolve_code(struct GA_auth_handler* call, const char* code);
/**
 * Perform an action following the completion of authorization.
 *
 * :param call: The auth_handler representing the action to perform.
 */
GDK_API int GA_auth_handler_call(struct GA_auth_handler* call);
/**
 * Free an auth_handler after use.
 *
 * :param call: The auth_handler to free.
 */
GDK_API int GA_destroy_auth_handler(struct GA_auth_handler* call);