lib/ffi/generated_bindings.dart


  late final _GA_get_twofactor_configPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_twofactor_config>>(
          'GA_get_twofactor_config');
  late final _GA_get_twofactor_config =
      _GA_get_twofactor_configPtr.asFunction<DartGA_get_twofactor_config>();

  /// Change wallet settings.
  ///
  /// :param session: The session to use.
  /// :param settings: The new :ref:`settings` values.
  /// :param call: Destination for the resulting GA_auth_handler.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_change_settings(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> settings,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_change_settings(
      session,
      settings,
      call,
    );
  }

  late final _GA_change_settingsPtr =
      _lookup<ffi.NativeFunction<NativeGA_change_settings>>(
          'GA_change_settings');
  late final _GA_change_settings =
      _GA_change_settingsPtr.asFunction<DartGA_change_settings>();

  /// Get current wallet settings.
  ///
  /// :param session: The session to use.
  /// :param settings: Destination for the current :ref:`settings`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_settings(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_json>> settings,
  ) {
    return _GA_get_settings(
      session,
      settings,
    );
  }

  late final _GA_get_settingsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_settings>>('GA_get_settings');
  late final _GA_get_settings =
      _GA_get_settingsPtr.asFunction<DartGA_get_settings>();

  int GA_convert_json_to_string(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output,
  ) {
    return _GA_convert_json_to_string(
      json,
      output,
    );
  }

  late final _GA_convert_json_to_stringPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_to_string>>(
          'GA_convert_json_to_string');
  late final _GA_convert_json_to_string =
      _GA_convert_json_to_stringPtr.asFunction<DartGA_convert_json_to_string>();

  int GA_convert_string_to_json(
    ffi.Pointer<ffi.Char> input,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_convert_string_to_json(
      input,
      output,
    );
  }

  late final _GA_convert_string_to_jsonPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_string_to_json>>(
          'GA_convert_string_to_json');
  late final _GA_convert_string_to_json =
      _GA_convert_string_to_jsonPtr.asFunction<DartGA_convert_string_to_json>();

  int GA_convert_json_value_to_string(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output,
  ) {
    return _GA_convert_json_value_to_string(
      json,
      path,
      output,
    );
  }

  late final _GA_convert_json_value_to_stringPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_value_to_string>>(
          'GA_convert_json_value_to_string');
  late final _GA_convert_json_value_to_string =
      _GA_convert_json_value_to_stringPtr.asFunction<
          DartGA_convert_json_value_to_string>();

  int GA_convert_json_value_to_uint32(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint32> output,
  ) {
    return _GA_convert_json_value_to_uint32(
      json,
      path,
      output,
    );
  }

  late final _GA_convert_json_value_to_uint32Ptr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_value_to_uint32>>(
          'GA_convert_json_value_to_uint32');
  late final _GA_convert_json_value_to_uint32 =
      _GA_convert_json_value_to_uint32Ptr.asFunction<
          DartGA_convert_json_value_to_uint32>();

  int GA_convert_json_value_to_uint64(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> output,
  ) {
    return _GA_convert_json_value_to_uint64(
      json,
      path,
      output,
    );
  }

  late final _GA_convert_json_value_to_uint64Ptr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_value_to_uint64>>(
          'GA_convert_json_value_to_uint64');
  late final _GA_convert_json_value_to_uint64 =
      _GA_convert_json_value_to_uint64Ptr.asFunction<
          DartGA_convert_json_value_to_uint64>();

  int GA_convert_json_value_to_bool(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint32> output,
  ) {
    return _GA_convert_json_value_to_bool(
      json,
      path,
      output,
    );
  }

  late final _GA_convert_json_value_to_boolPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_value_to_bool>>(
          'GA_convert_json_value_to_bool');
  late final _GA_convert_json_value_to_bool = _GA_convert_json_value_to_boolPtr
      .asFunction<DartGA_convert_json_value_to_bool>();

  int GA_convert_json_value_to_json(
    ffi.Pointer<GA_json> json,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_convert_json_value_to_json(
      json,
      path,
      output,
    );
  }

  late final _GA_convert_json_value_to_jsonPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_json_value_to_json>>(
          'GA_convert_json_value_to_json');
  late final _GA_convert_json_value_to_json = _GA_convert_json_value_to_jsonPtr
      .asFunction<DartGA_convert_json_value_to_json>();

  /// Free a GA_json object.
  ///
  /// :param json: GA_json object to free.
  int GA_destroy_json(
    ffi.Pointer<GA_json> json,
  ) {
    return _GA_destroy_json(
      json,
    );
  }

  late final _GA_destroy_jsonPtr =
      _lookup<ffi.NativeFunction<NativeGA_destroy_json>>('GA_destroy_json');
  late final _GA_destroy_json =
      _GA_destroy_jsonPtr.asFunction<DartGA_destroy_json>();

  /// Get the status/result of an action requiring authorization.
  ///
  /// :param call: The auth_handler whose status is to be queried.
  /// :param output: Destination for the resulting :ref:`auth-handler-status`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  ///
  /// Methods in the api that may require two factor or hardware authentication
  /// to complete return a GA_auth_handler object. This object encapsulates the
  /// process of determining whether authentication is required and handling
  /// conditions such as re-prompting and re-trying after an incorrect two
  /// factor code is entered.
  ///
  /// The object acts as a state machine which is stepped through by the caller
  /// until the desired action is completed. At each step, the current state can
  /// be determined and used to perform the next action required.
  ///
  /// Some actions require a sequence of codes and decisions; these are hidden
  /// behind the state machine interface so that callers do not need to handle
  /// special cases or program their own logic to handle any lower level API
  /// differences.
  ///
  /// The state machine has the following states, which are returned in the
  /// ``"status"`` element from `GA_auth_handler_get_status`:
  ///
  /// * ``"done"``: The action has been completed successfully. Any data returned
  /// |  from the action is present in the ``"result"`` element of the status JSON.
  /// | The auth_handler object should be destroyed using `GA_destroy_auth_handler`
  /// | after receiving this status.
  ///
  /// * ``"error"``: A non-recoverable error occurred performing the action. The
  /// | associated error message is given in the status element ``"error"``. The
  /// | auth_handler object should be destroyed using `GA_destroy_auth_handler` and
  /// | the action restarted from scratch if this state is returned.
  ///
  /// * ``"request_code"``: Two factor authorization is required. The caller should
  /// | prompt the user to choose a two factor method from the ``"methods"`` element
  /// | and call `GA_auth_handler_request_code` with the selected method.
  ///
  /// * ``"resolve_code"``: A twofactor code from the ``"request_code"`` step, or
  /// | data from a hardware device is required. If the status JSON contains
  /// | :ref:`hw-required-data`, then see :ref:`hw-resolve-overview` for details.
  /// | Otherwise, to resolve a twofactor code, the caller should prompt the user
  /// | to enter the code from the twofactor method chosen in the ``"request_code"``
  /// | step, and pass this code to `GA_auth_handler_resolve_code`.
  ///
  /// * ``"call"``: Twofactor or hardware authorization is complete and the caller
  /// | should call `GA_auth_handler_call` to perform the action.
  int GA_auth_handler_get_status(
    ffi.Pointer<GA_auth_handler> call,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_auth_handler_get_status(
      call,
      output,
    );
  }

  late final _GA_auth_handler_get_statusPtr =
      _lookup<ffi.NativeFunction<NativeGA_auth_handler_get_status>>(
          'GA_auth_handler_get_status');
  late final _GA_auth_handler_get_status = _GA_auth_handler_get_statusPtr
      .asFunction<DartGA_auth_handler_get_status>();

  /// Request a two factor authentication code to authorize an action.
  ///
  /// :param call: The auth_handler representing the action to perform.
  /// :param method: The selected two factor method to use
  int GA_auth_handler_request_code(
    ffi.Pointer<GA_auth_handler> call,
    ffi.Pointer<ffi.Char> method,
  ) {
    return _GA_auth_handler_request_code(
      call,
      method,
    );
  }

  late final _GA_auth_handler_request_codePtr =
      _lookup<ffi.NativeFunction<NativeGA_auth_handler_request_code>>(
          'GA_auth_handler_request_code');
  late final _GA_auth_handler_request_code = _GA_auth_handler_request_codePtr
      .asFunction<DartGA_auth_handler_request_code>();

  /// Authorize an action by providing its previously requested two factor authentication code.
  ///
  /// :param call: The auth_handler representing the action to perform.
  /// :param code: The two factor authentication code received by the user, or
  /// |    the serialised JSON response for hardware interaction (see :ref:`hw-resolve-overview`).
  int GA_auth_handler_resolve_code(
    ffi.Pointer<GA_auth_handler> call,
    ffi.Pointer<ffi.Char> code,
  ) {
    return _GA_auth_handler_resolve_code(
      call,
      code,
    );
  }

  late final _GA_auth_handler_resolve_codePtr =
      _lookup<ffi.NativeFunction<NativeGA_auth_handler_resolve_code>>(
          'GA_auth_handler_resolve_code');
  late final _GA_auth_handler_resolve_code = _GA_auth_handler_resolve_codePtr
      .asFunction<DartGA_auth_handler_resolve_code>();

  /// Perform an action following the completion of authorization.
  ///
  /// :param call: The auth_handler representing the action to perform.
  int GA_auth_handler_call(
    ffi.Pointer<GA_auth_handler> call,
  ) {
    return _GA_auth_handler_call(
      call,
    );
  }

  late final _GA_auth_handler_callPtr =
      _lookup<ffi.NativeFunction<NativeGA_auth_handler_call>>(
          'GA_auth_handler_call');
  late final _GA_auth_handler_call =
      _GA_auth_handler_callPtr.asFunction<DartGA_auth_handler_call>();

  /// Free an auth_handler after use.
  ///
  /// :param call: The auth_handler to free.
  int GA_destroy_auth_handler(
    ffi.Pointer<GA_auth_handler> call,
  ) {
    return _GA_destroy_auth_handler(
      call,
    );
  }

  late final _GA_destroy_auth_handlerPtr =
      _lookup<ffi.NativeFunction<NativeGA_destroy_auth_handler>>(
          'GA_destroy_auth_handler');
  late final _GA_destroy_auth_handler =
      _GA_destroy_auth_handlerPtr.asFunction<DartGA_destroy_auth_handler>();
